Prikaz vremena objave novosti i validacija forme

--- a/index.html
+++ b/index.html
@@ -63,5 +63,21 @@
 		<footer>
         	<span>&copy; Copyright Planinski turizam u BiH</span>
     	</footer>
+    	<script type="text/javascript" src="myjs.js"></script>
+    	<script type="text/javascript">
+    		var d1 = new Date();
+    		d1.setHours(20, 10, 0);
+    		var d2 = new Date(1962, 6, 7);
+    		d2.setHours(0, 0, 10);
+    		var d3 = new Date();
+    		d3.setHours(0, 40, 1);
+    		var d4 = new Date();
+    		d4.setHours(12, 35, 10);
+
+    		date_time("time1",d1);
+    		date_time("time2",d2);
+    		date_time("time3",d3);
+    		date_time("time4",d4);
+    	</script>
 	</body>
 </html>
